[tool.poetry]
name = "dns-service"
version = "0.1.0"
description = ""
authors = ["Vyacheslav <danubise@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dnslib = "^0.9.23"
pyyaml = "^6.0.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
